lab7 dynamic routes with express added

--- a/lab7/package.json
+++ b/lab7/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lab6",
-  "version": "0.1.0",
-  "private": true,
+  "name": "lab7",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,10 +10,7 @@
   "type": "module",
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "axios": "^0.21.1",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "express": "^4.17.1"
   }
 }
